tests/render_snapshots/snapshots/render_snapshots__overlays__help_overlay.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.us╭ Help ────────────────────────────────────────────────╮───────────┐
│  public.po│▸ Global Keys                                        ▲│           │
│  public.co│  q                     Quit application             ┃│           │
│           │  ?                     Toggle help                  ││           │
│           │  /, Ctrl+P             Open Table Picker            ││           │
│           │  Ctrl+K                Open Command Palette         ││           │
│           │  :                     Enter command line           ││           │
│           │  f                     Toggle Focus                 ││           │
│           │  1/2/3, < / >          Switch or cycle pane focus   ││           │
│           │  Tab/⇧Tab              Inspector prev/next tab      ││───────────┘
│           │  r                     Reload metadata              ││───────────┐
│           │  s                     Open SQL Editor              ││           │
│           │  e                     Open ER Diagram              ││           │
│           │  c                     Open Connection Selector     ││           │
│           │  Ctrl+E                Export result to CSV         ││           │
│           │  Ctrl+R                Toggle Read-Only             ││           │
│           │  Ctrl+O                Open Query History           ││           │
│           │                                                     ││           │
│           │▸ Navigation                                         ▼│           │
└───────────╰ ?/Esc Close ─────────────────────────────────────────╯───────────┘
?/Esc:Close
