tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_compare_tab_unavailable.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────╮       │
│       │                                                              │       │
│       │  Comparison unavailable                                      │       │
│       │                                                              │       │
│       │   • Could not parse cost from either plan                    │       │
│       │                                                              │       │
│       │  ──────────────────────────────────────────────────────────  │───────┘
│       │                                                              │───────┐
│       │  Previous                    │  Latest                       │       │
│       │  EXPLAIN  (0.00s)            │  EXPLAIN  (0.00s)             │       │
│       │  ─────────────────────────── │  ───────────────────────────  │       │
│       │ ──────────────────────────────────────────────────────────── │       │
│       │  [NORMAL]                                             Ready  │       │
│       ╰ e: Edit │ y: Yank │ Tab/⇧Tab: Switch │ Esc/q: Close ─────────╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
