tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_completion_popup_with_scroll.snap
---
source: tests/render_snapshots/overlays.rs
assertion_line: 90
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││(select a table)                                          │
│  public.comments ││                                                          │
│       ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────╮       │
│       │ SELECT                                                       │       │
│       │        ┌───────────────────────────────────────────┐         │       │
│       │        │ posts       table                         │         │       │
│       │        │ comments    table                         │         │       │
│       │        │ id          column                        │         │       │
│       │        │ name        column                        │         │───────┘
│       │        │ email       column                        │         │───────┐
│       │        │ created_at  column                        │         │       │
│       │        │ updated_at  column                        │         │       │
│       │        │ COUNT       keyword                       │         │       │
│       │ ───────└───────────────────────────────────────────┘──────── │       │
│       │  [INSERT]                                             Ready  │       │
│       ╰ ^Enter: Run │ ^E: Explain │ ^L: Clear │ ^O: History │ Esc: No╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
^Enter:Run  ^E:Explain  ↑↓←→:Move  Esc:Normal
