tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_cursor_at_head.snap
---
source: tests/render_snapshots/overlays.rs
assertion_line: 104
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────╮       │
│       │ SELECT 1                                                     │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │ ──────────────────────────────────────────────────────────── │       │
│       │  [INSERT]                                             Ready  │       │
│       ╰ ^Enter: Run │ ^E: Explain │ ^L: Clear │ ^O: History │ Esc: No╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
^Enter:Run  ^E:Explain  ↑↓←→:Move  Esc:Normal
