tests/render_snapshots/snapshots/render_snapshots__overlays__sql_modal_normal_cursor_at_tail.snap
---
source: tests/render_snapshots/overlays.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│       ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────╮       │
│       │ SELECT 1                                                     │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │───────┘
│       │                                                              │───────┐
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │ ──────────────────────────────────────────────────────────── │       │
│       │  [NORMAL]                                             Ready  │       │
│       ╰ ^Enter: Run │ i: Insert │ Tab/⇧Tab: Switch │ Esc/q: Close ───╯       │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
